--- a/public/views/submissions.html
+++ b/public/views/submissions.html
@@ -17,10 +17,11 @@
     </thead>
 
     <tbody>
-      <tr ng-repeat="(key,row) in submissions" class="{{row.status[row.status.length-1].action==2?'red-text':''}} {{row.status[row.status.length-1].action==0?'grey-text':''}}">
+      <tr ng-repeat="(key,row) in submissions"
+        class="{{row.status[row.status.length-1].action==2?'red-text':''}} {{row.status[row.status.length-1].action==0?'grey-text':''}}">
         <td>{{row.activityName}}</td>
         <td>{{getUserNames(users, row.authors)}}</td>
-        <td>{{row.status[row.status.length-1].display}}</td> 
+        <td>{{row.status[row.status.length-1].display}}</td>
         <td width="20%" style="white-space:nowrap;">
           <div class="chip">
             <img src="{{users[row.status[row.status.length-1].user].avatar}}">
@@ -28,10 +29,17 @@
           </div>
         </td>
         <td width="1%" style="white-space:nowrap;">
-          <a ng-show="user.admin" title="Descargar" class="waves-effect waves-light green darken-3 btn-small btn-floating z-depth-3" ng-click="downloaded(key, row)"><i class="material-icons">get_app</i></a>
-          <a title="Historial" class="waves-effect waves-light blue darken-3 btn-small btn-floating z-depth-3" ng-click="viewSubm(key)"><i class="material-icons">history</i></a>
-          <a title="Eliminar" class="waves-effect waves-light red darken-3 btn-small btn-floating z-depth-3 modal-trigger {{!user.admin && (row.status[row.status.length-1].action > 0) ? 'disabled':''}}" data-target="confirm_delete_modal" ng-click="deleteFile(key)"><i class="material-icons">delete</i></a>
-          <a title="Evaluar" ng-show="user.admin && row.status[row.status.length-1].action == 1" title="Corregido" class="waves-effect waves-light brown darken-3 btn-small btn-floating z-depth-3" ng-click="evaluated(key)"><i class="material-icons">done_outline</i></a>
+          <a ng-show="user.admin" title="Descargar"
+            class="waves-effect waves-light green darken-3 btn-small btn-floating z-depth-3"
+            ng-click="downloaded(key, row)"><i class="material-icons">get_app</i></a>
+          <a title="Historial" class="waves-effect waves-light blue darken-3 btn-small btn-floating z-depth-3"
+            ng-click="viewSubm(key)"><i class="material-icons">history</i></a>
+          <a title="Eliminar"
+            class="waves-effect waves-light red darken-3 btn-small btn-floating z-depth-3 modal-trigger {{!user.admin && (row.status[row.status.length-1].action > 0) ? 'disabled':''}}"
+            data-target="confirm_delete_modal" ng-click="deleteFile(key)"><i class="material-icons">delete</i></a>
+          <a title="Evaluar" ng-show="user.admin && row.status[row.status.length-1].action == 1" title="Corregido"
+            class="waves-effect waves-light brown darken-3 btn-small btn-floating z-depth-3"
+            ng-click="evaluated(key)"><i class="material-icons">done_outline</i></a>
         </td>
       </tr>
     </tbody>
@@ -41,8 +49,8 @@
 
 
 <div class="fixed-action-btn" ng-hide="user.admin">
-  <a title="Agregar" class="btn-floating btn-large green darken-1 pulse modal-trigger" data-target="files_modal" ng-click="resetForm()"><i
-      class="large material-icons">add</i></a>
+  <a title="Agregar" class="btn-floating btn-large green darken-1 pulse modal-trigger" data-target="files_modal"
+    ng-click="resetForm()"><i class="large material-icons">add</i></a>
 </div>
 
 <div id="files_modal" class="modal" ng-hide="user.admin">
@@ -50,11 +58,12 @@
     <h4>Indicar actividad</h4>
 
     <div class="input-field">
-        <select id="activity_select">
-            <option value="" disabled selected>Elija una opción</option>
-            <option value="{{row.id}}" ng-repeat="(key,row) in activities track by $index" ng-if="row.dl.submit">{{row.name}}</option>
-        </select>
-        <label for="activity_select">Actividad</label>
+      <select id="activity_select">
+        <option value="" disabled selected>Elija una opción</option>
+        <option value="{{row.id}}" ng-repeat="(key,row) in activities track by $index" ng-if="row.dl.submit">
+          {{row.name}}</option>
+      </select>
+      <label for="activity_select">Actividad</label>
     </div>
 
     <div ng-show="selectedActivity">
@@ -74,23 +83,25 @@
     <div ng-show="selectedActivity.type=='sim'" class="file-field input-field">
       <div class="input-field">
         <select id="simulation_select">
-            <option value="" disabled selected>Elija una simulación</option>
-            <option value="{{sim.id}}" ng-repeat="(key,sim) in simulations track by $index">{{sim.name}}</option>
+          <option value="" disabled selected>Elija una simulación</option>
+          <option value="{{sim.id}}" ng-repeat="(key,sim) in simulations track by $index">{{sim.name}}</option>
         </select>
         <label for="simulation_select">Simulación</label>
       </div>
     </div>
 
     <div ng-show="selectedActivity" class="input-field">
-        <textarea id="obsTextarea" class="materialize-textarea"></textarea>
-        <label for="obsTextarea">Observaciones</label>
+      <textarea id="obsTextarea" class="materialize-textarea"></textarea>
+      <label for="obsTextarea">Observaciones</label>
     </div>
   </div>
 
   <div class="modal-footer">
     <a class="modal-close waves-effect waves-white btn grey">Cancelar</a>
-    <a ng-if="selectedActivity.type=='report'" class="waves-effect waves-white btn green darken-3" ng-click="pushFile()">Entregar</a>
-    <a ng-if="selectedActivity.type=='sim'" class="waves-effect waves-white btn blue darken-3" ng-click="submitSim()">Entregar</a>
+    <a ng-if="selectedActivity.type=='report'" class="waves-effect waves-white btn green darken-3"
+      ng-click="pushFile()">Entregar</a>
+    <a ng-if="selectedActivity.type=='sim'" class="waves-effect waves-white btn blue darken-3"
+      ng-click="submitSim()">Entregar</a>
   </div>
 </div>
 
@@ -111,75 +122,85 @@
 </div>
 
 <div id="confirm_evaluate_modal" class="modal" ng-show="user.admin">
-    <div class="modal-content">
-      <h5>Resultado de la evaluación</h5>
-      
-      <p><b>Actividad:</b> {{submissions[evaluatingKey].activityName}}</p>
-      <p><b>Comisión:</b> {{getUserNames(users, submissions[evaluatingKey].authors)}}</p>
-      <p><b>Nombre de archivo:</b> {{submissions[evaluatingKey].name}} [.{{submissions[evaluatingKey].format}}]</p>
-      <p ng-if="submissions[evaluatingKey].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[evaluatingKey].size)}}</p>
-      <p ng-if="submissions[evaluatingKey].type=='sim'"><b>Componentes:</b> {{submissions[evaluatingKey].size}}</p>
-      
-      <br>
+  <div class="modal-content">
+    <h5>Resultado de la evaluación</h5>
 
-      <div class="input-field">
-          <select id="evaluation_select">
-              <option value="" disabled selected>Elija una opción</option>
-              <option value="2">Revisar</option>
-              <option value="3">Aprobado</option>
-          </select>
-          <label for="evaluation_select">Evaluar como</label>
-      </div>
-    
-      <div class="input-field">
-          <textarea id="obsTextarea2" class="materialize-textarea"></textarea>
-          <label for="obsTextarea2">Observaciones</label>
-      </div>
-      
+    <p><b>Actividad:</b> {{submissions[evaluatingKey].activityName}}</p>
+    <p><b>Comisión:</b> {{getUserNames(users, submissions[evaluatingKey].authors)}}</p>
+    <p><b>Nombre de archivo:</b> {{submissions[evaluatingKey].name}} [.{{submissions[evaluatingKey].format}}]</p>
+    <p ng-if="submissions[evaluatingKey].type=='report'"><b>Peso:</b>
+      {{readableFileSize(submissions[evaluatingKey].size)}}</p>
+    <p ng-if="submissions[evaluatingKey].type=='sim'"><b>Componentes:</b> {{submissions[evaluatingKey].size}}</p>
+
+    <br>
+
+    <div class="input-field">
+      <select id="evaluation_select" ng-model="eval_result">
+        <option value="" disabled selected>Elija una opción</option>
+        <option value="2">Revisar</option>
+        <option value="3">Aprobado</option>
+      </select>
+      <label for="evaluation_select">Evaluar como</label>
     </div>
-  
-    <div class="modal-footer">
-      <a class="modal-close waves-effect waves-white btn grey">Cancelar</a>
-      <a class="waves-effect waves-white btn green darken-3" ng-click="confirmEvaluate()">Confirmar</a>
+
+    <div class="input-field">
+      <textarea id="obsTextarea2" class="materialize-textarea"></textarea>
+      <label for="obsTextarea2">Observaciones</label>
     </div>
+
+    <div ng-show="eval_result==3">
+      <h5>Calificaciones</h5>
+      <div class="input-field" ng-repeat="(key, sc) in leafActivities track by $index">
+        <input type="number" min="0" max="100" id="scoreInput_{{leafActivities[key].id}}"></input>
+        <label for="scoreInput_{{leafActivities[key].id}}">{{leafActivities[key].name}}</label>
+      </div>
+    </div>
+
   </div>
 
-<div id="submission_modal" class="modal wide-modal">
-    <div class="modal-content">
-      <h4>Detalles de la entrega</h4>
-      <p><b>Actividad:</b> {{submissions[submKeyView].activityName}}</p>
-      <p><b>Comisión:</b> {{getUserNames(users, submissions[submKeyView].authors)}}</p>
-      <p><b>Nombre de archivo:</b> {{submissions[submKeyView].name}} [.{{submissions[submKeyView].format}}]</p>
-      <p ng-if="submissions[submKeyView].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[submKeyView].size)}}</p>
-      <p ng-if="submissions[submKeyView].type=='sim'"><b>Componentes:</b> {{submissions[submKeyView].size}}</p>
-      <h5>Historial:</h5>
-      <table class="highlight row" style="max-width:100%;overflow-x:auto">
-          <thead>
-            <tr>
-              <th>Fecha/hora</th>
-              <th>Usuario</th>
-              <th>Estado</th>
-              <th>Observaciones</th>
-            </tr>
-          </thead>
-      
-          <tbody>
-            <tr ng-repeat="(key,row) in submissions[submKeyView].status">
-              <td>{{getTime(3,row.timestamp)}}</td>
-              <td>
-                <div class="chip">
-                  <img src="{{users[row.user].avatar}}">
-                  {{users[row.user].name}}
-                </div>
-              </td>
-              <td>{{row.display}}</td>
-              <td title="{{row.obs}}" style="white-space:pre-wrap; word-wrap:break-word" width="20%">{{row.obs}}</td> 
-            </tr>
-          </tbody>
-        </table>
-    </div>
-  
-    <div class="modal-footer">
-      <a class="modal-close waves-effect waves-white btn green darken-3">Aceptar</a>
-    </div>
+  <div class="modal-footer">
+    <a class="modal-close waves-effect waves-white btn grey">Cancelar</a>
+    <a class="waves-effect waves-white btn green darken-3" ng-click="confirmEvaluate()">Confirmar</a>
   </div>
+</div>
+
+<div id="submission_modal" class="modal">
+  <div class="modal-content">
+    <h4>Detalles de la entrega</h4>
+    <p><b>Actividad:</b> {{submissions[submKeyView].activityName}}</p>
+    <p><b>Comisión:</b> {{getUserNames(users, submissions[submKeyView].authors)}}</p>
+    <p><b>Nombre de archivo:</b> {{submissions[submKeyView].name}} [.{{submissions[submKeyView].format}}]</p>
+    <p ng-if="submissions[submKeyView].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[submKeyView].size)}}
+    </p>
+    <p ng-if="submissions[submKeyView].type=='sim'"><b>Componentes:</b> {{submissions[submKeyView].size}}</p>
+    <h5>Historial:</h5>
+    <table class="highlight row" style="max-width:100%;overflow-x:auto">
+      <thead>
+        <tr>
+          <th>Fecha/hora</th>
+          <th>Usuario</th>
+          <th>Estado</th>
+          <th>Observaciones</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr ng-repeat="(key,row) in submissions[submKeyView].status">
+          <td>{{getTime(3,row.timestamp)}}</td>
+          <td>
+            <div class="chip">
+              <img src="{{users[row.user].avatar}}">
+              {{users[row.user].name}}
+            </div>
+          </td>
+          <td>{{row.display}}</td>
+          <td title="{{row.obs}}" style="white-space:pre-wrap; word-wrap:break-word" width="20%">{{row.obs}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="modal-footer">
+    <a class="modal-close waves-effect waves-white btn green darken-3">Aceptar</a>
+  </div>
+</div>
